Memory sizing for cgroups
I previously forgot to enable the requisite JVM options when running the JVM within a container.